# django_examples

./: README.md
chatting/: README.md
chatting/chat/: consumers.py  routing.py
chatting/chatting/: routing.py  settings.py  urls.py
cookbook/: README.md  db.sqlite3
cookbook/cookbook/: schema.py  settings.py  urls.py
cookbook/cookbook/ingredients/: models.py  schema.py
cookbook/cookbook/ingredients/fixtures/: ingredients.json
cookbook/cookbook/ingredients/migrations/: 0001_initial.py  0002_auto_20200530_0332.py
mysite/mysite/: settings.py
mysite/polls/: models.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: index.html
nginx/: myapp.ini  uwsgi.py
python-docker/: README.md  app.py  environment.yml
unittest/: README.rst  requirements.txt  setup.cfg
unittest/algo_examples/: __init__.py  array.py
unittest/tests/: test_array.py
